# shadcn-maud

./: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json  tailwind.config.js
scripts/: theme_toggle.js
src/: button.rs  input.rs  main.rs
src/web/: button.rs  file_uploader.rs  input.rs  mod.rs  toggle_theme.rs
static/: files.txt
styles/: tailwind.css
