[package]
name = "shadcnui-maud"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
axum = { version = "0.7.5", features = ["multipart", "tokio"] }
flate2 = "1.0.30"
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
ureq = "2.10.0"
